# URC

./: .gitignore  CONNECT_TO_PI.md  CONTRIBUTORS.md  GenerateCalibration.py  README.md  radio_robot_test.py  webcam_calibration.npz
ArmController/: README.md
ArucoDetection/: ArucoDetection.py
Documentation/: Antenna.md  packets.md
DriverStation/: README.md  ds.py  gui.py  imgui.ini  networking.py  requirements.txt  testconnection.py  window.py
DriverStation/mock/: mockMCU.py  nohup.out  readme.md  test.sh
HAL/: HAL.ino  controllerlinux.py  controllerwin.py  haltest.py  newHAL.ino  robotControl.ino
Radio/: code.py  radio.ino  receive.py  send.py
Radio/ACK/: read.py  write.py
Radio/radio/: Documentation.md  radio.ino  recieve.ino  send.ino  updatedradio.ino
RobotCode/: CMakeLists.txt  README.md  camera_calib.txt  install.sh  meson.build
RobotCode/include/: armTester.h  driverStation.h  logger.h  robotActuation.h  robotArm.h  robotControl.h  robotSerial.h  robotState.h
RobotCode/libs/: README.md
RobotCode/src/: driverStation.cpp  main.cpp  robotActuation.cpp  robotArm.cpp  robotControl.cpp  robotSerial.cpp  robotState.cpp
RobotCode2/: .gitignore  CMakeLists.txt  README.md
RobotCode2/include/: robotArm.h
RobotCode2/lib/orocos-kdl/lib/: liborocos-kdl.so.1.5  liborocos-kdl.so.1.5.2
RobotCode2/src/: armTester.cpp  main.cpp  robotArm.cpp
TestScripts/: RobotMovement.py  armVisualizer.py  armtest.py  armtest_controller.py  controller.ino  radio_test.py  testingNavMath.py
TestScripts/ArucoDetection/: ArucoDetection.py  FinalArucoDetection.cpp  GenerateCalibrationMatrix.py  YAMLCalibrationGeneration.py  webcam_calibration.yaml
TestScripts/ObjectDetection/: ReadMe.md  detect.py  integratedObjectDetection.py  test.py  train_urc_yolo.py  yolo_test.py
TestScripts/ObjectDetection/urc_objects/: data.yaml
serial_forwarder/: SerialForwarder.cpp  SerialForwarder.h  main.cpp  meson.build
serial_forwarder/asio-1.30.2/: .meson-subproject-wrap-hash.txt
